@@ -1,9 +1,8 @@
-From: Nobuhiro Iwamatsu <iwamatsu@nigauri.org>
-Subject: Add SH supprt
-
-The test-suite logs can be found at:
-
-  <http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=535288>
+Author: Nobuhiro Iwamatsu <iwamatsu@nigauri.org>
+Description: Add SH supprt
+ The test-suite logs can be found at:
+ .
+ <http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=535288>
 
 
 ---
