@@ -1,3 +1,10 @@
+Description: Fix man page errors
+Author: Guillem Jover <guillem@debian.org>
+Origin: vendor
+Forwarded: no
+Last-Update: 2014-10-09
+
+
 ---
  man/io.3               |   73 +++++++++----------
  man/io_cancel.3        |   36 ++++-----
