@@ -1,3 +1,12 @@
+Description: Fix FTBFS with newer gcc 4.6
+ Using -Werror on a released project is in general not a good idea, as changes
+ in the toolchain and environment can trigger unexpected build failures.
+Author: Guillem Jover <guillem@debian.org>
+Origin: vendor
+Forwarded: no
+Last-Update: 2014-10-09
+
+
 ---
  harness/Makefile |    2 +-
  1 file changed, 1 insertion(+), 1 deletion(-)
